# jetson_cam_gpio

./: .gitignore  CMakeLists.txt  READEME.md  main.cpp
apps/gpio/: CMakeLists.txt  gpio.cpp
apps/mkdir/: CMakeLists.txt  mkdir.cpp
apps/pass_args/: CMakeLists.txt  pass_args.cpp
include/: camera.hpp  cmdline.h  hall_sensor.hpp
src/camera/: CMakeLists.txt  camera.cpp
src/hall_sensor/: CMakeLists.txt  hall_sensor.cpp
